chore: enable code formatting on save and update editor settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "editor.formatOnSave": false
+  "editor.formatOnSave": true,
+  "editor.renderWhitespace": "all",
+  "editor.fontFamily": "'D2Coding ligature', Consolas, 'Courier New', monospace"
 }
